addapt and add hover effect

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="head">
         <div class="avatar">
             <img
-                    src="https://github.com/nikita-nikita-nikita/homepage/blob/develop/media/avatar.jpg?raw=true"
+                    src="https://raw.githubusercontent.com/nikita-nikita-nikita/homepage/develop/media/avatar.jpg"
                     alt="avatar"
             >
             <p>Nikita Bludov</p>
